substrate/frame/support/test/tests/construct_runtime_ui/more_than_256_modules.stderr
error: Pallet index doesn't fit into u8, index is 256
  --> tests/construct_runtime_ui/more_than_256_modules.rs:27:3
   |
27 |         Pallet256: pallet256::{},
   |         ^^^^^^^^^
